--- a/.github/workflows/ROMROM-ANDROID-PLAYSTORE-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-PLAYSTORE-CICD.yaml
@@ -531,7 +531,7 @@ jobs:
               skip_upload_images: true,               # 이미지 업로드 안함
               skip_upload_screenshots: true,          # 스크린샷 업로드 안함
               skip_upload_changelogs: false,          # Changelog 업로드 (metadata 디렉토리에서 자동 인식)
-              release_status: 'completed'                 # 'draft', 'completed'
+              release_status: 'draft'                 # 'draft', 'completed'
             )
 
               puts "✅ Play Store 내부 테스트 배포 완료!"
