--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,10 @@ Flutter/flutter_assets/
 *.p12
 *.p8
 *.mobileprovision
+
+# Podfile.lock (iOS/macOS 의존성 잠금 파일)
+ios/Podfile.lock
+macos/Podfile.lock
+
+# iOS/macOS 빌드 아티팩트
+ios/Flutter/AppFrameworkInfo.plist
