--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,8 @@ xcuserdata/
 .sconsign.dblite
 *.pbxproj_temp
 Flutter/ephemeral/
+**/Flutter/ephemeral/**
+ios/Flutter/ephemeral/
 Flutter/app.flx
 Flutter/app.zip
 Flutter/flutter_assets/
