--- a/.github/workflows/test-playstore-automation.yaml
+++ b/.github/workflows/test-playstore-automation.yaml
@@ -116,9 +116,9 @@ jobs:
       - name: Install Python dependencies
         run: |
           echo "📦 Python 의존성 설치 중..."
-          pip install selenium==4.18.1
+          pip install selenium==4.18.1 undetected-chromedriver
           echo "✅ Python 의존성 설치 완료"
-          pip list | grep selenium
+          pip list | grep -E "selenium|undetected"
       
       - name: Verify environment
         run: |
