--- a/.github/workflows/test-playstore-automation.yaml
+++ b/.github/workflows/test-playstore-automation.yaml
@@ -30,8 +30,8 @@ on:
           - 'false'
 
 jobs:
-  test-selenium-automation:
-    name: Test Selenium Automation
+  test-playwright-automation:
+    name: Test Playwright Automation
     runs-on: ubuntu-latest
     # 메인 워크플로우가 성공한 경우에만 실행 (workflow_run 트리거 시)
     # workflow_dispatch로 실행하는 경우 항상 실행
@@ -41,47 +41,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: deploy
+          # workflow_run (자동): deploy 브랜치
+          # workflow_dispatch (수동): 현재 브랜치 (main 등)
+          ref: ${{ github.event_name == 'workflow_run' && 'deploy' || github.ref }}
       
-      - name: Install Chrome and ChromeDriver
+      - name: 워크플로우 실행 정보
         run: |
-          echo "📦 Chrome 및 ChromeDriver 설치 중..."
-          
-          # Chrome 설치
-          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-          echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
-          
-          # Chrome 버전 확인
-          CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d'.' -f1-3)
-          echo "✅ Chrome 설치 완료: $CHROME_VERSION"
-          
-          # ChromeDriver 다운로드
-          echo "📥 ChromeDriver 다운로드 중..."
-          
-          # Chrome for Testing API를 사용하여 ChromeDriver 다운로드
-          CHROMEDRIVER_URL="https://storage.googleapis.com/chrome-for-testing-public/${CHROME_VERSION}/linux64/chromedriver-linux64.zip"
-          
-          # ChromeDriver 다운로드 및 설치
-          wget -q "$CHROMEDRIVER_URL" -O /tmp/chromedriver.zip || {
-            echo "⚠️ 정확한 버전을 찾을 수 없습니다. 최신 stable 버전 다운로드 시도..."
-            # 대체: 최신 stable 버전
-            wget -q "https://googlechromelabs.github.io/chrome-for-testing/LATEST_RELEASE_STABLE" -O /tmp/version.txt
-            LATEST_VERSION=$(cat /tmp/version.txt)
-            echo "📋 최신 stable 버전: $LATEST_VERSION"
-            wget -q "https://storage.googleapis.com/chrome-for-testing-public/${LATEST_VERSION}/linux64/chromedriver-linux64.zip" -O /tmp/chromedriver.zip
-          }
-          
-          # 압축 해제 및 설치
-          sudo apt-get install -y unzip
-          unzip -q /tmp/chromedriver.zip -d /tmp/
-          sudo mv /tmp/chromedriver-linux64/chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
-          
-          # 확인
-          echo "✅ ChromeDriver 설치 완료"
-          chromedriver --version
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "📋 워크플로우 실행 정보"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "트리거: ${{ github.event_name }}"
+          echo "현재 브랜치: $(git branch --show-current)"
+          echo "커밋 해시: $(git rev-parse --short HEAD)"
+          if [ "${{ github.event_name }}" = "workflow_run" ]; then
+            echo "🤖 자동 실행 (deploy 브랜치)"
+          else
+            echo "🖱️  수동 실행 (main 브랜치)"
+          fi
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
       
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -92,16 +69,68 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-selenium-${{ hashFiles('.github/requirements-selenium.txt') }}
+          key: ${{ runner.os }}-pip-playwright-${{ hashFiles('.github/requirements-playwright.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-selenium-
+            ${{ runner.os }}-pip-playwright-
       
       - name: Install Python dependencies
         run: |
           echo "📦 Python 의존성 설치 중..."
-          pip install -r .github/requirements-selenium.txt
+          pip install -r .github/requirements-playwright.txt
           echo "✅ Python 의존성 설치 완료"
-          pip list | grep selenium
+          pip list | grep -E "playwright"
+      
+      - name: Install Playwright browsers (Ubuntu 24.04 compatible)
+        run: |
+          echo "📦 Playwright 브라우저 설치 중..."
+          
+          # Ubuntu 24.04 호환성: 시스템 의존성 수동 설치
+          echo "🔧 시스템 의존성 설치 중..."
+          sudo apt-get update
+          sudo apt-get install -y \
+            libasound2t64 \
+            libatk-bridge2.0-0 \
+            libatk1.0-0 \
+            libatspi2.0-0 \
+            libcairo2 \
+            libcups2 \
+            libdbus-1-3 \
+            libdrm2 \
+            libgbm1 \
+            libglib2.0-0 \
+            libnspr4 \
+            libnss3 \
+            libpango-1.0-0 \
+            libx11-6 \
+            libxcb1 \
+            libxcomposite1 \
+            libxdamage1 \
+            libxext6 \
+            libxfixes3 \
+            libxkbcommon0 \
+            libxrandr2 \
+            libxshmfence1 \
+            fonts-liberation \
+            libvpx9 \
+            libopus0 \
+            libharfbuzz0b \
+            libgstreamer1.0-0 \
+            libgstreamer-plugins-base1.0-0 \
+            libevent-2.1-7t64 \
+            libenchant-2-2 \
+            libsecret-1-0 \
+            libhyphen0 \
+            libmanette-0.2-0 \
+            libflite1 \
+            libwoff1
+          
+          echo "✅ 시스템 의존성 설치 완료"
+          
+          # Playwright 브라우저 설치 (의존성 체크 스킵)
+          echo "🌐 Chromium 브라우저 설치 중..."
+          playwright install chromium
+          
+          echo "✅ Playwright 브라우저 설치 완료"
       
       - name: Verify environment
         run: |
@@ -109,12 +138,10 @@ jobs:
           echo "🔍 환경 검증"
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
           echo "Python: $(python --version)"
-          echo "Chrome: $(google-chrome --version)"
-          echo "ChromeDriver: $(chromedriver --version)"
-          echo "Selenium: $(pip show selenium | grep Version)"
+          echo "Playwright: $(pip show playwright | grep Version)"
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
       
-      - name: Run Selenium automation
+      - name: Run Playwright automation
         env:
           GOOGLE_EMAIL: ${{ secrets.GOOGLE_EMAIL }}
           GOOGLE_PASSWORD: ${{ secrets.GOOGLE_PASSWORD }}
@@ -126,7 +153,7 @@ jobs:
           DEBUG: ${{ github.event.inputs.debug || 'true' }}
         run: |
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
-          echo "🚀 Selenium 자동화 실행"
+          echo "🚀 Playwright 자동화 실행"
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
           echo "트리거: ${{ github.event_name }}"
           echo "헤드리스 모드: ${{ env.HEADLESS }}"
@@ -134,7 +161,7 @@ jobs:
           echo "디버그 모드: ${{ env.DEBUG }}"
           echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
           
-          python .github/scripts/automate_playstore.py \
+          python .github/scripts/automate_playstore_playwright.py \
             --email "${{ secrets.GOOGLE_EMAIL }}" \
             --password "${{ secrets.GOOGLE_PASSWORD }}" \
             --developer-id "${{ secrets.PLAY_CONSOLE_DEVELOPER_ID }}" \
@@ -147,7 +174,7 @@ jobs:
         if: failure() && (github.event.inputs.debug == 'true' || github.event_name == 'workflow_run')
         uses: actions/upload-artifact@v4
         with:
-          name: selenium-screenshots-failure
+          name: playwright-screenshots-failure
           path: screenshots/
           retention-days: 7
           if-no-files-found: warn
@@ -156,7 +183,7 @@ jobs:
         if: success() && (github.event.inputs.debug == 'true' || github.event_name == 'workflow_run')
         uses: actions/upload-artifact@v4
         with:
-          name: selenium-screenshots-success
+          name: playwright-screenshots-success
           path: screenshots/
           retention-days: 3
           if-no-files-found: warn
