--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   provider: ^6.1.5
   shadex: ^1.0.2
   shared_preferences: ^2.5.2
-  skeletonizer: ^1.4.3
+  skeletonizer: ^2.1.0+1
   geocoding: ^3.0.0
 
 dev_dependencies:
