체크박스에 대한 체크로직이 터치영역에 대해서 글자를 눌러도 체크박스 동작하도록 변경 필요 : refactor : claude code 로컬파일 ignore처리 podfile 업데이트 처리 https://github.com/TEAM-ROMROM/RomRom-FE/issues/341

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,6 @@ Flutter/flutter_assets/
 
 # iOS/macOS 빌드 아티팩트
 ios/Flutter/AppFrameworkInfo.plist
+
+# Claude Code local settings
+.claude/settings.local.json
