경고 확인 기본알림 토스트 추가 필요 : feat : svg 파일삭제, 아이콘으로 변경 https://github.com/TEAM-ROMROM/RomRom-FE/issues/348

--- a/lib/icons/config.json
+++ b/lib/icons/config.json
@@ -105,20 +105,6 @@
       ]
     },
     {
-      "uid": "edd559e7ad5de9658f9ea397c8aa324d",
-      "css": "warning",
-      "code": 59406,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M107.1 830.4C146.2 830.4 177.9 862.1 177.9 901.2 177.9 940.3 146.2 972 107.1 972 68 972 36.3 940.3 36.3 901.2 36.3 862.1 68 830.4 107.1 830.4ZM107.1 28.1C170.3 28.1 219.6 82.6 213.4 145.5L159 689C156.4 715.7 133.9 736 107.1 736 80.3 736 57.9 715.7 55.2 689L0.9 145.5C-5.4 82.6 44 28.1 107.1 28.1Z",
-        "width": 214
-      },
-      "search": [
-        "warning"
-      ]
-    },
-    {
       "uid": "f6580352d08959456f1aba5038097d18",
       "css": "cancel",
       "code": 59424,
@@ -235,13 +221,55 @@
       "css": "romromRLogoText",
       "code": 59453,
       "src": "custom_icons",
-      "selected": false,
+      "selected": true,
       "svg": {
         "path": "M714.2 623.7L646.2 527.9C665.9 498.9 677.6 463.9 677.6 426.2 677.6 326.6 597 246 497.7 246L402.1 246.1C382.7 245.1 362.8 250 345.3 261.6 323.5 276 309.6 297.9 304.7 321.7 304.5 322.4 304.5 323.1 304.3 323.8 304.1 324.7 304 325.4 303.8 326.3 303.7 326.9 303.6 327.7 303.6 328.4 303.4 329.2 303.3 330.1 303.2 330.9 303.2 331.6 303.1 332.2 303.1 332.9 303 333.8 302.9 334.7 302.9 335.6 302.9 336.3 302.8 336.9 302.8 337.6 302.8 338.5 302.7 339.4 302.7 340.4 302.7 340.6 302.7 340.8 302.7 340.9V680.9C302.7 733.3 345.1 775.7 397.3 775.7 449.5 775.7 491.9 733.2 491.9 680.9V637.5L556.2 728C584.9 771.7 643.6 783.8 687.2 755 730.8 726.1 742.9 667.4 714.1 623.7H714.2ZM497.7 478.8C495.7 478.8 493.8 478.7 491.9 478.5V373.9C493.8 373.7 495.7 373.6 497.7 373.6 526.7 373.6 550.2 397.1 550.2 426.2 550.2 455.3 526.7 478.9 497.7 478.9V478.8Z",
         "width": 1000
       },
       "search": [
         "icon"
+      ]
+    },
+    {
+      "uid": "861adb5173369e3db7d2a836942cf6f5",
+      "css": "information",
+      "code": 59395,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M533.2 374.6C547 374.6 558.2 385.8 558.2 399.6V773.8C558.2 787.6 547 798.8 533.2 798.8H467.6C453.8 798.8 442.6 787.6 442.6 773.8V439.7H437.1C423.3 439.7 412.1 428.6 412.1 414.7V399.6C412.1 385.8 423.3 374.6 437.1 374.6H533.2ZM560.4 273.1C560.4 306.5 533.4 333.5 500 333.5 466.6 333.5 439.6 306.5 439.6 273.1 439.6 239.7 466.6 212.7 500 212.7 533.4 212.7 560.4 239.7 560.4 273.1Z",
+        "width": 1000
+      },
+      "search": [
+        "information"
+      ]
+    },
+    {
+      "uid": "cae65e785c7f59c126353f4513918d3f",
+      "css": "warning",
+      "code": 59396,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M500.1 731.3C527.4 731.3 549.6 753.5 549.6 780.8 549.6 808.2 527.4 830.3 500.1 830.3 472.7 830.3 450.5 808.2 450.5 780.8 450.5 753.4 472.7 731.3 500.1 731.3ZM500.1 169.6C544.3 169.6 578.8 207.8 574.4 251.8L536.3 632.3C534.5 650.9 518.8 665.2 500.1 665.2 481.3 665.2 465.6 650.9 463.7 632.3L425.6 251.8C421.2 207.8 455.8 169.6 500.1 169.6Z",
+        "width": 1000
+      },
+      "search": [
+        "warning"
+      ]
+    },
+    {
+      "uid": "edd559e7ad5de9658f9ea397c8aa324d",
+      "css": "warning",
+      "code": 59406,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M107.1 830.4C146.2 830.4 177.9 862.1 177.9 901.2 177.9 940.3 146.2 972 107.1 972 68 972 36.3 940.3 36.3 901.2 36.3 862.1 68 830.4 107.1 830.4ZM107.1 28.1C170.3 28.1 219.6 82.6 213.4 145.5L159 689C156.4 715.7 133.9 736 107.1 736 80.3 736 57.9 715.7 55.2 689L0.9 145.5C-5.4 82.6 44 28.1 107.1 28.1Z",
+        "width": 214
+      },
+      "search": [
+        "warning"
       ]
     }
   ]
