채팅방 기본 화면 API 연결 : feat : mock 채팅방 페이지 구현 및 채팅웹소켓 연결 구현 https://github.com/TEAM-ROMROM/RomRom-FE/issues/345

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shadex: ^1.0.2
   shared_preferences: ^2.5.2
   skeletonizer: ^2.1.0+1
+  stomp_dart_client: ^2.0.0
   geocoding: ^3.0.0
 
 dev_dependencies:
