--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   flutter_svg: ^2.0.17
   geolocator: ^13.0.2
+  geocoding: ^3.0.0
   google_sign_in: ^6.2.2
   gradient_borders: ^1.0.1
   http: ^1.3.0
@@ -39,7 +40,7 @@ dependencies:
   shadex: ^1.0.2
   shared_preferences: ^2.5.2
   skeletonizer: ^2.1.0+1
-  geocoding: ^3.0.0
+  stomp_dart_client: ^2.0.0
 
 dev_dependencies:
   flutter_test:
