푸쉬_알림_환경설정_및_api_연동 : feat : firebase 와 프로젝트 연결, ios 플랫폼 버전 업(15.0) https://github.com/TEAM-ROMROM/RomRom-FE/issues/369

--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ lib/generated/
 lib/firebase_options.dart
 
 # Ignore iOS config files
-android/Google-Services.json
+android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
 
 # IOS 빌드
