푸쉬_알림_환경설정_및_api_연동 : feat : Gradle 8.7 / AGP 8.6+ / Kotlin 2.1 / Google Services 4.4.2 로 버전 수정 https://github.com/TEAM-ROMROM/RomRom-FE/issues/369

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,11 +2,11 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter()  // 필요하다면 추가
+        // jcenter() 제거
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:8.4.0"  // Android Gradle Plugin
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"  // Kotlin Plugin
+        classpath "com.android.tools.build:gradle:8.6.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.1.0"
     }
 }
 
