--- a/ios/Podfile
+++ b/ios/Podfile
@@ -52,6 +52,7 @@ post_install do |installer|
         ## dart: [PermissionGroup.location, PermissionGroup.locationAlways, PermissionGroup.locationWhenInUse]
         'PERMISSION_LOCATION=1',
         'PERMISSION_LOCATION_WHENINUSE=0',
+        'PERMISSION_NOTIFICATIONS=1'
       ]
     end
   end
