받은_요청_터치_시_읽음_처리 : feat : .gitignore 처리 https://github.com/TEAM-ROMROM/RomRom-FE/issues/373

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ lib/firebase_options.dart
 
 # Ignore iOS config files
 android/Google-Services.json
+android/app/Google-Services.json
 ios/Runner/GoogleService-Info.plist
 
 # IOS 빌드
